[gd_scene load_steps=11 format=3 uid="uid://jqolbqoxmi4k"]

[ext_resource type="MeshLibrary" uid="uid://dus3m8fgbhrmr" path="res://resources/meshLibrary/testMeshLib.tres" id="1_jai4f"]
[ext_resource type="Script" path="res://code/cloneTrigger.gd" id="2_5h0nu"]
[ext_resource type="Script" path="res://code/level.gd" id="2_gjhlc"]
[ext_resource type="Script" path="res://code/laser.gd" id="4_xycs7"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_rx6lr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x7kd6"]
size = Vector3(1, 1.21771, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_tjlxx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_esq8b"]
size = Vector3(1, 0.125, 0.125)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_csi00"]
albedo_color = Color(1, 0, 0.101961, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7pyp0"]
material = SubResource("StandardMaterial3D_csi00")

[node name="level" type="GridMap"]
mesh_library = ExtResource("1_jai4f")
physics_material = SubResource("PhysicsMaterial_rx6lr")
cell_size = Vector3(0.25, 0.25, 0.25)
cell_scale = 0.25
data = {
"cells": PackedInt32Array(0, 65535, 5, 1, 65535, 5, 2, 65535, 5, 3, 65535, 5, 4, 65535, 5, 5, 65535, 5, 65535, 65535, 5, 65534, 65535, 2, 65533, 65535, 5, 65532, 65535, 5, 65531, 65535, 5, 65530, 65535, 5, 65535, 0, 2, 65535, 1, 5, 65535, 2, 5, 65535, 3, 5, 65535, 4, 5, 65535, 5, 5, 65535, 6, 5, 65535, 65534, 5, 65535, 65530, 5, 65535, 65529, 5, 65535, 65528, 0, 65529, 65528, 0, 65530, 65528, 0, 65531, 65528, 0, 65532, 65528, 0, 65533, 65528, 0, 65534, 65528, 0, 5, 65528, 0, 4, 65528, 0, 3, 65528, 0, 2, 65528, 0, 1, 65528, 0, 0, 65528, 0, 65529, 6, 5, 65530, 6, 5, 65531, 6, 5, 65532, 6, 5, 65533, 6, 5, 65534, 6, 2, 0, 6, 5, 1, 6, 5, 2, 6, 5, 3, 6, 5, 4, 6, 5, 5, 6, 5, 6, 65528, 0, 6, 65529, 0, 6, 65530, 0, 6, 65531, 0, 6, 65532, 0, 6, 65533, 0, 6, 65534, 0, 6, 65535, 0, 6, 0, 0, 6, 1, 0, 6, 2, 0, 6, 3, 0, 6, 4, 0, 6, 5, 0, 6, 6, 0, 65529, 65535, 5, 65528, 6, 5, 65528, 5, 5, 65528, 4, 5, 65528, 2, 5, 65528, 1, 5, 65528, 0, 2, 65528, 65535, 5, 65528, 65534, 5, 65528, 65533, 5, 65528, 65532, 5, 65528, 65531, 5, 65528, 65530, 5, 65528, 65529, 5, 65528, 65528, 0, 65529, 65534, 5, 65530, 65534, 5, 65531, 65534, 5, 65532, 65534, 5, 65533, 65534, 5, 65534, 65534, 2, 65534, 65533, 2, 65534, 65532, 2, 65533, 65532, 5, 65533, 65533, 5, 65532, 65533, 5, 65531, 65533, 5, 65530, 65533, 5, 65529, 65533, 5, 65529, 65532, 5, 65530, 65532, 5, 65531, 65532, 5, 65532, 65532, 5, 65533, 65531, 5, 65534, 65531, 2, 65534, 65530, 2, 65534, 65529, 2, 65533, 65529, 5, 65532, 65529, 5, 65531, 65529, 5, 65531, 65530, 5, 65530, 65530, 5, 65529, 65530, 5, 65529, 65529, 5, 65530, 65529, 5, 65529, 65531, 5, 65530, 65531, 5, 65531, 65531, 5, 65532, 65531, 5, 65533, 65530, 5, 65532, 65530, 5, 65534, 5, 2, 65533, 5, 5, 65532, 5, 5, 65531, 5, 5, 65530, 5, 5, 65529, 5, 5, 65529, 4, 5, 65530, 4, 8, 65531, 4, 5, 65532, 4, 5, 65533, 4, 5, 65534, 4, 2, 65534, 3, 2, 65533, 3, 5, 65532, 3, 5, 65531, 3, 5, 65530, 3, 5, 65529, 3, 5, 65529, 2, 5, 65530, 2, 5, 65531, 2, 5, 65532, 2, 1, 65533, 2, 5, 65533, 1, 5, 65534, 1, 2, 65534, 2, 2, 65534, 0, 2, 65533, 0, 2, 65532, 0, 2, 65531, 0, 2, 65530, 0, 2, 65529, 1, 5, 65529, 0, 2, 65530, 1, 5, 65531, 1, 5, 65532, 1, 5, 0, 5, 5, 1, 5, 5, 2, 5, 5, 3, 5, 5, 4, 5, 5, 5, 5, 5, 5, 4, 5, 4, 4, 5, 3, 4, 5, 2, 4, 5, 1, 4, 5, 0, 4, 5, 0, 3, 5, 1, 3, 5, 2, 3, 5, 3, 3, 5, 4, 3, 5, 5, 3, 5, 5, 2, 5, 4, 2, 5, 3, 2, 5, 2, 2, 5, 1, 2, 5, 0, 2, 5, 0, 1, 5, 1, 1, 5, 2, 1, 5, 3, 1, 5, 4, 1, 5, 5, 1, 5, 5, 0, 2, 4, 0, 2, 3, 0, 2, 2, 0, 2, 1, 0, 2, 0, 0, 2, 0, 65534, 5, 1, 65534, 5, 2, 65534, 5, 3, 65534, 5, 4, 65534, 5, 5, 65534, 5, 5, 65533, 5, 4, 65533, 5, 3, 65533, 5, 2, 65533, 5, 1, 65533, 5, 0, 65533, 5, 0, 65532, 5, 1, 65532, 5, 2, 65532, 5, 3, 65532, 5, 4, 65532, 5, 5, 65532, 5, 5, 65531, 5, 4, 65531, 5, 3, 65531, 5, 2, 65531, 5, 1, 65531, 5, 1, 65530, 5, 2, 65530, 5, 3, 65530, 5, 4, 65530, 5, 5, 65530, 5, 0, 65531, 5, 0, 65530, 5, 0, 65529, 5, 1, 65529, 5, 2, 65529, 5, 3, 65529, 5, 4, 65529, 5, 5, 65529, 5, 65535, 65533, 5, 65535, 65532, 5, 65535, 65531, 5, 65527, 65528, 0, 65527, 65529, 5, 65527, 65530, 5, 65527, 65531, 5, 65527, 65532, 5, 65527, 65533, 5, 65527, 65534, 5, 65527, 65535, 5, 65528, 3, 5, 65527, 0, 2, 65527, 1, 5, 65527, 2, 5, 65527, 3, 5, 65527, 4, 5, 65527, 5, 5, 65527, 6, 5, 65527, 7, 5, 65528, 7, 5, 65529, 7, 5, 65530, 7, 5, 65531, 7, 5, 65532, 7, 5, 65533, 7, 5, 65534, 7, 2, 65535, 7, 5, 0, 7, 5, 1, 7, 5, 2, 7, 5, 3, 7, 5, 4, 7, 5, 5, 7, 5, 6, 7, 0, 65526, 65528, 0, 65526, 65529, 0, 65526, 65530, 0, 65526, 65531, 0, 65526, 65535, 0, 65526, 0, 0, 65526, 65532, 0, 65526, 65533, 0, 65526, 65534, 0, 65526, 1, 0, 65526, 2, 0, 65526, 3, 0, 65526, 4, 0, 65526, 5, 0, 65526, 6, 0, 65526, 7, 0, 65526, 8, 0, 65527, 8, 0, 65529, 8, 0, 65530, 8, 0, 65531, 8, 0, 65532, 8, 0, 65533, 8, 0, 65534, 8, 0, 65535, 8, 0, 0, 8, 0, 1, 8, 0, 2, 8, 0, 6, 8, 0, 5, 8, 0, 4, 8, 0, 3, 8, 0, 65528, 8, 0, 65540, 65530, 6, 65539, 65530, 6, 65538, 65530, 6, 65537, 65530, 6, 65536, 65530, 6, 65536, 65531, 6, 65536, 65532, 6, 65536, 65533, 6, 65536, 65534, 6, 65539, 3, 6, 65538, 3, 6, 65538, 4, 6, 65537, 4, 6, 65537, 5, 6, 65538, 5, 6, 65539, 4, 6, 65537, 3, 6, 65539, 5, 6, 65536, 2, 6, 131068, 65530, 6, 131067, 65530, 6, 131066, 65530, 6, 131065, 65530, 6, 131064, 65530, 6, 131064, 65531, 6, 131064, 65532, 6, 131064, 65533, 6, 131064, 65534, 6, 131065, 65534, 6, 131066, 65534, 6, 131067, 65534, 6, 131068, 65534, 6, 131068, 65533, 6, 131068, 65532, 6, 131067, 65532, 6, 131067, 65531, 6, 131066, 65531, 6, 131066, 65532, 6, 131066, 65533, 6, 131067, 65533, 6, 131065, 65532, 6, 131065, 65531, 6, 131065, 65533, 6, 131068, 65531, 6, 196603, 65533, 6, 196603, 65532, 6, 196603, 65531, 6, 196602, 65531, 6, 196601, 65531, 6, 196601, 65532, 6, 196601, 65533, 6, 196602, 65533, 6, 196602, 65532, 6, 131076, 65530, 6, 131075, 65530, 6, 131074, 65530, 6, 131073, 65530, 6, 131072, 65530, 6, 131072, 65531, 6, 131072, 65532, 6, 131072, 65533, 6, 131072, 65534, 6, 131075, 5, 6, 131075, 4, 6, 131075, 3, 6, 131074, 3, 6, 131073, 3, 6, 131073, 4, 6, 131073, 5, 6, 131074, 5, 6, 131074, 4, 6, 131072, 3, 6, 262138, 65532, 5, 196611, 3, 6, 196610, 3, 6, 196609, 3, 6, 196609, 4, 6, 196610, 4, 6, 196610, 5, 6, 196611, 4, 6, 196609, 5, 6, 196611, 5, 6, 196608, 4, 6, 196612, 65530, 6, 196611, 65530, 6, 196610, 65530, 6, 196609, 65530, 6, 196608, 65530, 6, 196608, 65531, 6, 196608, 65532, 6, 196608, 65533, 6, 196608, 65534, 6)
}
script = ExtResource("2_gjhlc")
metadata/_editor_floor_ = Vector3(1, 3, 0)

[node name="cloneTrigger" type="Area3D" parent="." groups=["clone_trigger"]]
script = ExtResource("2_5h0nu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="cloneTrigger"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -1.37557, 0.348002, 1.12606)
shape = SubResource("BoxShape3D_x7kd6")

[node name="spawnPoint" type="Node3D" parent="cloneTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.875454, 0.5, 0.624148)

[node name="start" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.625884, 1.32762, 1.12516)

[node name="end" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.37457, 1.12662, -0.875102)

[node name="CollisionShape3D" type="CollisionShape3D" parent="end"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
shape = SubResource("BoxShape3D_tjlxx")

[node name="laser" type="Area3D" parent="." groups=["hazard", "laser"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.378499, 0.352169, -0.641803)
script = ExtResource("4_xycs7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="laser"]
shape = SubResource("BoxShape3D_esq8b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="laser"]
transform = Transform3D(1, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, 0, 0)
mesh = SubResource("BoxMesh_7pyp0")

[connection signal="body_entered" from="cloneTrigger" to="cloneTrigger" method="_on_body_entered"]
[connection signal="body_exited" from="cloneTrigger" to="cloneTrigger" method="_on_body_exited"]
[connection signal="body_entered" from="laser" to="laser" method="_on_body_entered"]
